public class GenericPredictor {
    protected double[] inputData;
    protected double[] predictedData;

    public void predict(double[] earlyData) {
        double[] test = { 1.2, 3.4 };
    }

}
