//*********************************************************
// Class: AverageCalc
// Author: Simardeep Khinda
// Created: 03/22/2023
// Modified: 
//
// Purpose: AverageCalc is a class that uses methods to calculate the average of given arrays of doubles.   
//
// Attributes: 
//			-sum: double
//	        -average: double
// 
// Methods: -calculateAverage(double[], double[]): double[]
//
//*********************************************************

public class AverageCalc {
    private double sum;
    private double[] average;

    private double[] calculateAverage(double[] LRData, double[] DMData) {

        return average;
    }
}
